# rsshub-mcp

./: Cargo.toml  README.md  config.toml
.github/: copilot-instructions.md
mcp-client/: Cargo.toml  README.md
mcp-client/src/: generic.rs  quick_test.rs  simple_test.rs
rsshub-api/: Cargo.toml  README.md
rsshub-api/src/: lib.rs
rsshub-api/tests/: category.json
rsshub-mcp/: Cargo.toml  README.md  build.rs
rsshub-mcp/src/: config.rs  log.rs  main.rs  service.rs
src/: api.rs  config.rs  main.rs
tests/: rules.json
