[package]
name = "rsshub-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
config = "0.15.11"
is-terminal = "0.4.16"
once_cell = "1.21.3"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", branch = "main", features = [
  "server",
  "transport-sse-server",
  "transport-io",
] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
  "env-filter",
  "std",
  "fmt",
] }
url = "2.5.4"
shadow-rs = "1.1.1"
axum = { version = "0.8.3", features = ["macros"] }
futures = "0.3.31"
schemars = "0.8.22"
hex = "0.4.3"
eyre = "0.6.12"

[build-dependencies]
shadow-rs = "1.1.1"

[dev-dependencies]
mockito = "1.7.0"
