[workspace]
members = ["rsshub-api", "rsshub-mcp", "mcp-client"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.43", features = ["derive"] }
config = "0.15.13"
is-terminal = "0.4.16"
once_cell = "1.21.3"
ultrafast-mcp = { version = "202506018.1.0", features = ["full"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
  "env-filter",
  "std",
  "fmt",
] }
url = "2.5.4"
shadow-rs = "1.2.1"
axum = { version = "0.8.4", features = ["macros"] }
futures = "0.3.31"
schemars = "1.0.4"
hex = "0.4.3"
eyre = "0.6.12"
async-trait = "0.1.88"
uuid = { version = "1.0", features = ["v4"] }
mockito = "1.7.0"
