[workspace]
members = ["rsshub-api", "rsshub-mcp", "mcp-client"]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros"] }
clap = { version = "4.5.43", features = ["derive"] }
config = "0.15.13"
eyre = "0.6.12"
futures = "0.3.31"
hex = "0.4.3"
is-terminal = "0.4.16"
mockito = "1.7.0"
once_cell = "1.21.3"
reqwest = { version = "0.12.22", features = ["json"] }
rss = "2.0.8"
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
shadow-rs = "1.2.1"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "std",
    "fmt",
] }
ultrafast-mcp = { version = "202506018.1.0", features = ["full"] }
url = "2.5.4"
uuid = { version = "1.0", features = ["v4"] }
