[package]
name = "mcp-client"
version = "0.1.0"
edition = "2021"
authors = ["akjong"]
description = "MCP client for testing RSSHub MCP server"
license = "MIT"

[[bin]]
name = "simple_test"
path = "src/simple_test.rs"

[[bin]]
name = "quick_test"
path = "src/quick_test.rs"

[[bin]]
name = "generic"
path = "src/generic.rs"

[dependencies]
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
