[package]
name = "rsshub-api"
version = "0.1.0"
edition = "2021"
authors = ["akjong"]
description = "RSSHub API client library"
license = "MIT"
homepage = "https://github.com/akjong/rsshub-mcp"
repository = "https://github.com/akjong/rsshub-mcp"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
tokio-test = "0.4"
