[package]
name = "rsshub-mcp"
version = "0.1.0"
edition = "2021"
authors = ["akjong"]
description = "RSSHub Model Context Protocol server"
license = "MIT"
homepage = "https://github.com/akjong/rsshub-mcp"
repository = "https://github.com/akjong/rsshub-mcp"

[[bin]]
name = "rsshub-mcp"
path = "src/main.rs"

[dependencies]
# 本地依赖
rsshub-api = { path = "../rsshub-api" }

# 从 workspace 继承的依赖
async-trait = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
eyre = { workspace = true }
is-terminal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shadow-rs = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ultrafast-mcp = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
